[package]
name = "polygot-posts"
version = "0.1.0"
authors = ["Aryailia <Aryailia@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "polygot-posts"
path = "rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = "z" # Optimise for size

[dependencies]
filetime = "0.2" # For setting mtime (last updated)
chrono = "0.4"   # For working with dates formatted to RFC 2822
